--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pillow = "^9.5.0"
 roboflow = "^1.1.0"
 sqlalchemy = "^2.0.17"
 alembic = "^1.11.1"
+psycopg2 = "^2.9.6"
+asyncpg = "^0.27.0"
 
 
 [build-system]
