--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ asyncpg = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.4.1"
+ruff = "^0.0.277"
+black = "^23.3.0"
 
 [tool.mypy]
 python = "3.10"
