--- a/.github/workflows/ruff.yaml
+++ b/.github/workflows/ruff.yaml
@@ -13,6 +13,6 @@ jobs:
       - name: Install Dependencies
         run: | 
           python -m pip install --upgrade pip
-          pip install ruff#
+          pip install ruff
       - name: Run ruff
         run: ruff check --format=github .
