--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,8 +11,10 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install Dependencies
-        run: | 
+        run: |
           python -m pip install --upgrade pip
-          pip install ruff
+          pip install ruff pytest pytest-asyncio
       - name: Run ruff
         run: ruff check --format=github --select E,F,D --ignore D100,D104,D105,D107,F821 bot
+      - name: Run tests
+        run: pytest
