--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ mypy = "^1.4.1"
 ruff = "^0.0.277"
 black = "^23.3.0"
 pre-commit = "^3.3.3"
+aiogram-tests = "^1.0.3"
+pytest = "^7.4.0"
+pytest-asyncio = "^0.21.1"
 
 [tool.mypy]
 python = "3.10"
@@ -35,7 +38,7 @@ select = [
     "F",
     "D"
 ]
-exclude = ["config.py", "alembic"]
+exclude = ["config.py", "alembic", "tests"]
 ignore = ["D100", "D104", "D105", "D107", "F821"]
 
 [tool.ruff.pydocstyle]
