--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff pytest pytest-asyncio aiogram
+          pip install ruff pytest pytest-asyncio aiogram==3.0.0b7
       - name: Run ruff
         run: ruff check --format=github --select E,F,D --ignore D100,D104,D105,D107,F821 bot
       - name: Run tests
